# cuda-ai-2026

./: README.md
default/1_gelu_omp/chervyakov_ivan/: log.txt
default/1_gelu_omp/lukicheva_polina/: log.txt
default/2_gelu_cuda/pisarevsky_vadim/: CMakeLists.txt  gelu_cuda.cu
